# omemo-rs

./: .gitignore  Cargo.toml  README.ko.md  README.md  TODO.md  deny.toml
.github/workflows/: ci.yml  integration.yml
crates/omemo-doubleratchet/: Cargo.toml
crates/omemo-doubleratchet/benches/: crypto.rs
crates/omemo-doubleratchet/src/: aead.rs  dh_ratchet.rs  double_ratchet.rs  kdf.rs  kdf_chain.rs  kdf_hkdf.rs  kdf_separate_hmacs.rs  lib.rs  symmetric_key_ratchet.rs
crates/omemo-oldmemo/: Cargo.toml  build.rs
crates/omemo-oldmemo/src/: lib.rs
crates/omemo-pep/: Cargo.toml
crates/omemo-pep/src/: dispatch.rs  lib.rs  message.rs  message_old.rs  muc.rs  pep.rs  store.rs  store_old.rs  westron.rs  wire.rs
crates/omemo-pep/tests/: connect.rs  gate.rs  muc.rs  pep.rs  python_interop_session.rs
crates/omemo-rs-cli/: Cargo.toml
crates/omemo-rs-cli/src/: daemon.rs  main.rs  metrics.rs
crates/omemo-rs-cli/tests/: cli.rs  daemon.rs  daemon_fanout.rs  daemon_metrics.rs  daemon_muc_oldmemo.rs  daemon_outbox.rs  daemon_resume.rs  daemon_spk_rotation.rs  daemon_trust.rs  daemon_trust_manual.rs  python_interop.rs
crates/omemo-session/: Cargo.toml
crates/omemo-session/migrations/: 0001_init.sql  0002_trust.sql  0003_backend.sql  0004_outbox.sql
crates/omemo-session/src/: lib.rs
crates/omemo-session/tests/: persist_round_trip.rs  receive_initial.rs  spk_rotation.rs
crates/omemo-stanza/: Cargo.toml
crates/omemo-stanza/src/: axolotl_aead.rs  axolotl_stanza.rs  lib.rs  sce.rs
crates/omemo-stanza/tests/: python_interop_stanza.rs  roundtrip.rs  sce.rs
crates/omemo-test-harness/: Cargo.toml
crates/omemo-test-harness/src/: lib.rs
crates/omemo-test-harness/tests/: aead_aes_hmac.rs  dh_ratchet.rs  double_ratchet.rs  kdf_chain.rs  kdf_hkdf.rs  kdf_separate_hmacs.rs  oldmemo.rs  symmetric_key_ratchet.rs  twomemo.rs  x3dh.rs  xeddsa.rs
crates/omemo-twomemo/: Cargo.toml  build.rs
crates/omemo-twomemo/src/: lib.rs
crates/omemo-westron/: Cargo.toml
crates/omemo-westron/src/: caps.rs  identity.rs  lib.rs  signed_caps.rs  transcode.rs  wire.rs
crates/omemo-westron/tests/: test_caps.rs  test_identity.rs  test_wire.rs
crates/omemo-x3dh/: Cargo.toml
crates/omemo-x3dh/src/: lib.rs
crates/omemo-xeddsa/: Cargo.toml
crates/omemo-xeddsa/src/: lib.rs
docs/: architecture.md  converse-e2e.md  crypto-spec.md  daemon-protocol.md  decisions.md  pipeline.md  stages.md
test-vectors/fixtures/: aead_aes_hmac.json  dh_ratchet.json  double_ratchet.json  kdf_chain.json  kdf_hkdf.json  kdf_separate_hmacs.json  oldmemo.json  symmetric_key_ratchet.json  twomemo.json  x3dh.json  xeddsa.json
test-vectors/integration/: README.md
test-vectors/integration/converse/: index.html  nginx.conf
test-vectors/integration/prosody/: .gitignore  Dockerfile  docker-compose.yml  prosody.cfg.lua
test-vectors/integration/python-interop/: README.md  interop_client.py
test-vectors/integration/tls/: .gitignore  gen-cert.sh
test-vectors/integration/xmpp/: docker-compose.yml  ejabberd.yml
test-vectors/oldmemo/: oldmemo.proto
test-vectors/scripts/: gen_aead_aes_hmac.py  gen_dh_ratchet.py  gen_double_ratchet.py  gen_kdf_chain.py  gen_kdf_hkdf.py  gen_kdf_separate_hmacs.py  gen_oldmemo.py  gen_symmetric_key_ratchet.py  gen_twomemo.py  gen_x3dh.py  gen_xeddsa.py
