[package]
name = "omemo-doubleratchet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Double Ratchet algorithm. Port of python-doubleratchet."

[dependencies]
hkdf = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true, features = ["alloc"] }
x25519-dalek = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto"
harness = false
