[package]
name = "omemo-pep"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "XEP-0163 PEP integration for OMEMO 2 (device list and bundle publish/fetch over tokio-xmpp)."

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-xmpp = { workspace = true }
xmpp-parsers = { workspace = true }
jid = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }

omemo-stanza = { path = "../omemo-stanza" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
