[package]
name = "omemo-pep"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "XEP-0163 PEP integration for OMEMO 2 (device list and bundle publish/fetch over tokio-xmpp)."

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-xmpp = { workspace = true }
xmpp-parsers = { workspace = true }
jid = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
rand_core = { workspace = true }

omemo-stanza = { path = "../omemo-stanza" }
omemo-twomemo = { path = "../omemo-twomemo" }
omemo-oldmemo = { path = "../omemo-oldmemo" }
omemo-doubleratchet = { path = "../omemo-doubleratchet" }
omemo-x3dh = { path = "../omemo-x3dh" }
omemo-xeddsa = { path = "../omemo-xeddsa" }
omemo-session = { path = "../omemo-session" }
omemo-westron = { path = "../omemo-westron" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serial_test = "3"
# Used only by `tests/python_interop_session.rs` (gated behind
# `#[ignore]`). Drives a Python subprocess to confirm python-twomemo
# parses the same KEX bytes / multi-recipient stanza shape Rust
# emits.
serde_json = { workspace = true }
hex = { workspace = true }
