[package]
name = "omemo-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OMEMO chat CLI — one-shot send/recv plus a long-running JSON Lines daemon for orchestrator integration (nan-curunir successor)."

[[bin]]
name = "omemo-rs-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
anyhow = { workspace = true }
rand_core = { workspace = true }
futures-util = { workspace = true }
xmpp-parsers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus-client = "0.22"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1"] }
http-body-util = "0.1"

omemo-pep = { path = "../omemo-pep" }
omemo-twomemo = { path = "../omemo-twomemo" }
omemo-doubleratchet = { path = "../omemo-doubleratchet" }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
omemo-session = { path = "../omemo-session" }
