[package]
name = "omemo-stanza"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "XEP-0384 v0.9 (OMEMO 2) and v0.3 (eu.siacs.conversations.axolotl) stanza encode/parse, plus per-version body AEAD."

[dependencies]
quick-xml = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
aes-gcm = "0.10"
rand_core = { workspace = true }
zeroize = { workspace = true }
omemo-xeddsa = { path = "../omemo-xeddsa" }

[dev-dependencies]
# Used only by `tests/python_interop_stanza.rs` (gated behind
# `#[ignore]`). Runs a Python subprocess to compare wire shapes
# against the python-omemo reference impl.
hex = { workspace = true }
serde_json = { workspace = true }
