[package]
name = "omemo-x3dh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "X3DH key agreement. Port of python-x3dh."

[dependencies]
hkdf = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

omemo-xeddsa = { path = "../omemo-xeddsa" }
