[package]
name = "omemo-xeddsa"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "XEdDSA (Curve25519 ↔ Ed25519 signatures) for OMEMO. Port of python-xeddsa."

[dependencies]
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
